# inspector-rust

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LINUX_SETUP.de.md  README.de.md  README.md  inspector-rust.code-workspace  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: release.yml
core/frontend/: index.html  package.json
core/frontend/src/: App.tsx  main.tsx  styles.css
core/frontend/src/components/: AboutModal.tsx  BpmDetector.tsx  ColorPickerModal.tsx  Footer.test.tsx  Footer.tsx  HistoryItem.tsx  HistoryList.tsx  LinuxShortcutsSettings.tsx  NotesPanel.tsx  PongGame.tsx  PreviewPanel.tsx  ScreenshotEditor.tsx  ScreenshotPreview.tsx  SettingsPanel.tsx  SnakeGame.tsx  SnippetsPanel.tsx  SpaceInvadersGame.tsx  TotpOverlay.tsx
core/frontend/src/hooks/: useFuzzySearch.test.ts  useKeyboardNav.test.ts  useKeyboardNav.ts  useModifierHeld.test.ts  useModifierHeld.ts  useTauriEvent.ts
core/frontend/src/lib/: bpm.test.ts  bpm.ts  bruno.test.ts  bruno.ts  colors.test.ts  colors.ts  commands.test.ts  commands.ts  ipc.test.ts  ipc.ts  openers-data.ts  openers.test.ts  openers.ts  platform.test.ts  platform.ts  pong.test.ts  pong.ts  pwgen-dict.ts  pwgen.test.ts  pwgen.ts  snake.test.ts  snake.ts  space-invaders.test.ts  space-invaders.ts  text-transform.test.ts  text-transform.ts  theme.test.ts  theme.ts  totp.ts  types.ts
core/rust-lib/: Cargo.toml
core/rust-lib/src/: app_launcher.rs  backup.rs  bruno.rs  cli_dispatch.rs  clipboard_watcher.rs  commands.rs  crypto.rs  cutout.rs  db.rs  desktop_shortcuts.rs  expander.rs  finder_selection.rs  frontmost_app.rs  hotkey.rs  image_ops.rs  input_lock.rs  lib.rs  linux_portal.rs  md_to_pdf.rs  models.rs  mrxdown.rs  notes.rs  ocr.rs  osascript_util.rs  recolor.rs  region_picker.rs  screen_picker.rs  screen_recording.rs  screenshot_editor.rs  screenshot_preview.rs  seed.rs  settings.rs  snippets.rs  system_commands.rs  timer.rs  totp_import.rs  totp_store.rs  ui_state.rs  wakelock.rs
core/rust-lib/src/seed/: ai_prompts.json
core/rust-lib/src/text_field/: linux.rs  macos.rs  mod.rs  windows.rs
docs/: RELEASING.md  ai-prompts.md  backup.md  colors.md  encryption.md  macos-permissions.md  notes.md  snippets-import.md  spec.md  text-expander.md
docs/examples/snippets/: README.md  signatures.json
linux/: README.md  package.json
linux/src-tauri/: Cargo.toml  tauri.conf.json
linux/src-tauri/capabilities/: default.json  desktop.json
linux/src-tauri/src/: main.rs
macos/: README.md  package.json
macos/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
macos/src-tauri/capabilities/: default.json
scripts/: install-desktop-shortcuts.sh  install-linux.sh  install-macos.sh  ubuntu-terminal-copy-paste-ctrl-cv.sh
win/: README.md  package.json
win/src-tauri/: Cargo.toml  tauri.conf.json
win/src-tauri/capabilities/: default.json  desktop.json
win/src-tauri/icons/: icon.icns
win/src-tauri/src/: main.rs
