[workspace]
resolver = "2"
members = ["core/rust-lib", "win/src-tauri", "macos/src-tauri"]

[workspace.package]
version = "0.6.1"
edition = "2021"
authors = ["Martin Pfeffer <martinpaush@gmail.com>"]
license = "MIT"
repository = "https://github.com/pepperonas/clipsnap"

[workspace.dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"

# Data / crypto
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
# At-rest content encryption (entries / snippets / notes bodies). AES-256-GCM
# is the modern AEAD with hardware acceleration on both AArch64 and x86-64.
aes-gcm = "0.10"
rand = "0.8"
# OS keychain-backed key storage. macOS Keychain / Windows Credential
# Manager / Linux Secret Service — single API, transparent fallback.
keyring = "3"

# OS integration
clipboard-rs = "0.2"
enigo = "0.3"
dirs = "5"

# Observability / errors / concurrency
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"

# Release profile — favours determinism over compile speed so two `cargo
# build --release` runs of the same source produce as close to byte-identical
# binaries as Rust currently allows. This matters for ad-hoc-signed macOS
# builds: a stable binary → stable cdhash → the user's TCC Accessibility
# grant survives across rebuilds. (See scripts/install-macos.sh + macos/README.md.)
[profile.release]
codegen-units = 1   # single codegen unit removes parallelism non-determinism
lto = true          # full LTO; output is independent of compilation order
strip = "debuginfo" # debug info contains paths and timestamps
opt-level = 3
