[workspace]
resolver = "2"
members = ["core/rust-lib", "win/src-tauri", "macos/src-tauri"]

[workspace.package]
version = "0.23.0"
edition = "2021"
authors = ["Martin Pfeffer <martinpaush@gmail.com>"]
license = "MIT"
repository = "https://github.com/pepperonas/inspector-rust"

[workspace.dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"

# Data / crypto
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
# At-rest content encryption (entries / snippets / notes bodies). AES-256-GCM
# is the modern AEAD with hardware acceleration on both AArch64 and x86-64.
aes-gcm = "0.10"
rand = "0.8"
# OS keychain-backed key storage. macOS Keychain / Windows Credential
# Manager / Linux Secret Service — single API, transparent fallback.
keyring = "3"

# OS integration
clipboard-rs = "0.2"
enigo = "0.3"
dirs = "5"
# Image decode/encode for the recolor / cutout features. Output is
# always PNG (alpha-preserving), but inputs can be any of the formats
# users routinely have on disk: JPG/WEBP/GIF/BMP from screenshots,
# downloads, or cameras. HDR/EXR/etc. left out — irrelevant for
# clipboard / file-cutout workflows.
image = { version = "0.25", default-features = false, features = [
    "png", "jpeg", "webp", "gif", "bmp",
] }
# ONNX Runtime FFI for the ML-based subject cutout. We tried tract
# (pure Rust) first but it can't run U2Net's Resize ops cleanly —
# pytorch_half_pixel isn't supported, and naive substitution produces
# the wrong output dimensions. ort statically links the runtime via
# the `download-binaries` feature, so users don't need anything
# pre-installed. ndarray is used to build the input tensor.
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
ndarray = "0.17"
# Pure-Rust PNG optimiser — used by the `optim` power command. Lossless,
# zopfli-style deflate + filter selection. Ships statically; no external
# CLI tool required.
oxipng = { version = "9", default-features = false, features = ["zopfli"] }
# Cross-platform process inspection — drives the `kill` power command's
# live picker. Cheap (~10 ms full refresh on a typical desktop with
# 200+ processes). The default features pull in network/disk modules
# we don't need.
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

# Observability / errors / concurrency
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"

# Release profile — favours determinism over compile speed so two `cargo
# build --release` runs of the same source produce as close to byte-identical
# binaries as Rust currently allows. This matters for ad-hoc-signed macOS
# builds: a stable binary → stable cdhash → the user's TCC Accessibility
# grant survives across rebuilds. (See scripts/install-macos.sh + macos/README.md.)
[profile.release]
codegen-units = 1   # single codegen unit removes parallelism non-determinism
lto = true          # full LTO; output is independent of compilation order
strip = "debuginfo" # debug info contains paths and timestamps
opt-level = 3
