[package]
name = "inspector-rust-core"
description = "Shared, OS-independent app logic for Inspector Rust"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "inspector_rust_core"
crate-type = ["rlib"]

[dependencies]
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }
tauri-plugin-dialog = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
rusqlite = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
clipboard-rs = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
keyring = { workspace = true }
image = { workspace = true }
ort = { workspace = true }
ndarray = { workspace = true }
oxipng = { workspace = true }
sysinfo = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = { workspace = true }
tauri-plugin-global-shortcut = { workspace = true }
enigo = { workspace = true }

# Windows UI Automation bindings — only pulled in on Windows targets so
# macOS / Linux builds stay slim. Used by the text_field/windows module
# to read the focused field's selection without keystroke synthesis,
# and by screen_picker (eyedropper) for the fullscreen overlay + GetPixel.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    # WinRT OCR pipeline
    "Graphics_Imaging",
    "Media_Ocr",
    "Storage_Streams",
] }

# macOS-only Cocoa bindings for the screen color picker (NSColorSampler).
# objc2 + block2 give us safe-ish msg_send + stack-allocated Objective-C
# blocks without dragging in the deprecated `cocoa` crate.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
