[package]
name = "inspector-rust-macos"
description = "Inspector Rust — macOS bundle shell"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "inspector-rust"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
# Shared app logic.
inspector-rust-core = { path = "../../core/rust-lib" }

# Tauri + plugins listed here so tauri-build can discover permission manifests.
# `macos-private-api` is required by `macOSPrivateApi: true` in tauri.conf.json
# (used for transparent-window vibrancy on macOS).
tauri = { workspace = true, features = ["macos-private-api"] }
tauri-plugin-opener = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }
tauri-plugin-global-shortcut = { workspace = true }
tauri-plugin-autostart = { workspace = true }
tauri-plugin-dialog = { workspace = true }
